# ops-agent

./: .env.example  .gitignore  Makefile  README.md  agent.md  debug-dashboard-500-error.md  debug-service-unavailable.md  docker-compose.milvus.yml  noxfile.py  pyproject.toml  setup.cfg
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/src/api/: client.ts
dashboard/src/pages/: ChatPage.tsx  ConfigPage.tsx  KnowledgePage.tsx  MemoryPage.tsx  SystemPage.tsx
evals/: README.md  manifest.json  retrieval_queries_k8s_ops.jsonl  retrieval_queries_k8s_ops_symptom.jsonl
evals/dialog/: core.jsonl
evals/ops/: core.jsonl
evals/rag/: core.jsonl
src/ops_rag_agent/: __init__.py  __main__.py  config.py
src/ops_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ops_rag_agent/agents/: __init__.py  intent_analyzer.py  ops_agent.py  planner.py  rag_agent.py  skill_router.py  skill_router_node.py
src/ops_rag_agent/api/: __init__.py  app.py
src/ops_rag_agent/cache/: __init__.py  retrieval.py
src/ops_rag_agent/graph/: __init__.py  app.py  checkpointing.py  router.py
tests/: test_actions_execution.py  test_api_dashboard.py  test_api_invoke.py  test_guardrails.py  test_intent_analyzer.py  test_local_health_llm_fallback.py  test_macos_local_health_ops.py  test_memory_compression.py  test_ops_agent.py  test_planner.py  test_remote_ssh_utils.py  test_retriever.py  test_skill_registry_remote_skills.py  test_skill_router.py  test_skill_router_e2e.py
(+55 files in other folders)
