 [project]
 name = "ops-rag-agent"
 version = "0.1.0"
 description = "LangGraph + LangChain based agent system: dialog + ops + RAG"
requires-python = ">=3.9"
 dependencies = [
   "fastapi>=0.110",
   "uvicorn>=0.27",
   "pydantic>=2.6",
   "pydantic-settings>=2.2",
   "httpx>=0.27",
   "langchain>=0.2",
   "langchain-core>=0.2",
   "langchain-community>=0.2",
   "langchain-openai>=0.1",
   "langgraph>=0.2",
  "langsmith>=0.4",
   "psutil>=5.9",
   "pymilvus>=2.4",
 ]
 
 [project.optional-dependencies]
 dev = [
   "ruff>=0.5",
   "pytest>=8.0",
   "nox>=2026.4.10",
 ]

[project.scripts]
ops-rag-agent = "ops_rag_agent.__main__:main"
 
[build-system]
requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
 line-length = 100
target-version = "py39"
