[metadata]
name = ops-rag-agent
version = 0.1.0
description = LangGraph + LangChain based agent system: dialog + ops + RAG

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    fastapi>=0.110
    uvicorn>=0.27
    pydantic>=2.6
    pydantic-settings>=2.2
    httpx>=0.27
    langchain>=0.2
    langchain-core>=0.2
    langchain-community>=0.2
    langchain-openai>=0.1
    langgraph>=0.2
    langsmith>=0.4
    psutil>=5.9
    pymilvus>=2.4

[options.packages.find]
where = src
